force-app/main/default/objects/Chess_Game__c/Chess_Game__c.object-meta.xml
<CustomObject>
    <label>Chess Game</label>
    <nameField>
        <displayFormat>CG-{00000}</displayFormat>
        <label>Chess Game Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chess Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>