force-app/main/default/objects/Chess_Game__c/fields/Black_Player__c.field-meta.xml
<CustomField>
    <fullName>Black_Player__c</fullName>
    <label>Black Player</label>
    <length>255</length>
    <type>Text</type>
</CustomField>