force-app/main/default/objects/Chess_Game__c/fields/Date_Played__c.field-meta.xml
<CustomField>
    <fullName>Date_Played__c</fullName>
    <label>Date Played</label>
    <type>Date</type>
</CustomField>