force-app/main/default/objects/Chess_Game__c/fields/Game_Id__c.field-meta.xml
<CustomField>
    <fullName>Game_Id__c</fullName>
    <label>Game Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>