force-app/main/default/objects/Chess_Game__c/fields/Site_Link__c.field-meta.xml
<CustomField>
    <fullName>Site_Link__c</fullName>
    <label>Site Link</label>
    <type>Url</type>
</CustomField>