force-app/main/default/objects/Chess_Game__c/fields/Time_Control__c.field-meta.xml
<CustomField>
    <fullName>Time_Control__c</fullName>
    <label>Time Control</label>
    <length>255</length>
    <type>Text</type>
</CustomField>