force-app/main/default/objects/Chess_Game__c/fields/x_Date_Played__c.field-meta.xml
<CustomField>
    <fullName>x_Date_Played__c</fullName>
    <label>Date Played</label>
    <type>Date</type>
</CustomField>