force-app/main/default/objects/Chess_Game__c/fields/x_Event__c.field-meta.xml
<CustomField>
    <fullName>x_Event__c</fullName>
    <label>Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>