force-app/main/default/objects/Chess_Game__c/fields/x_Opening__c.field-meta.xml
<CustomField>
    <fullName>x_Opening__c</fullName>
    <label>Opening</label>
    <length>255</length>
    <type>Text</type>
</CustomField>