force-app/main/default/objects/Chess_Game__c/fields/x_PGN__c.field-meta.xml
<CustomField>
    <fullName>x_PGN__c</fullName>
    <label>PGN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>