force-app/main/default/objects/Chess_Game__c/fields/x_Result__c.field-meta.xml
<CustomField>
    <fullName>x_Result__c</fullName>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>