force-app/main/default/objects/Chess_Game__c/fields/x_Termination__c.field-meta.xml
<CustomField>
    <fullName>x_Termination__c</fullName>
    <label>Termination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>