force-app/main/default/objects/Chess_Game__c/fields/x_White_Player__c.field-meta.xml
<CustomField>
    <fullName>x_White_Player__c</fullName>
    <label>White Player</label>
    <length>255</length>
    <type>Text</type>
</CustomField>